# Change Log
The format is based on [Keep a Changelog](http://keepachangelog.com/)

## [Unreleased]

## [v0.1.1] - Wed, 15 Nov 2017 17:33:47 +0900

### Fixed
- /orders/:id/purchase 에서 오래된 온라인 주문서를 볼때 오류가 나는 문제 해결 - 배송관련 정보가 없음 (#171)

### Changed
- 라운드 긴소매 블라우스 타입을 제거 (#174)
- 취업날개는 쿠폰은 입사면접 용도만을 허용 (#178)
- 결제완료 마감시간을 오전 10시에서 오전 09시로 변경 (#173)
- 2017년 추석물류 배송과 관련된 안내메세지 제거 (#163)

## [v0.1.0] - Thu, 02 Nov 2017 16:23:10 +0900

### Added
- configurable avatar and postcodify URI

## [v0.0.26] - Tue, 24 Oct 2017 16:46:36 +0900

### Added
- Dockerfiles

### Fixed
- 결제정보를 현재 로그인한 사용자가 아닌 주문서 사용자 정보로 수정 (#166)

## [v0.0.25] - Fri, 22 Sep 2017 10:45:53 +0900

### Changed
- default 의류착용일을 선택하지 않음 (#163)

## [v0.0.24] - Tue, 19 Sep 2017 19:09:51 +0900

### Changed
- 2017-09-25 ~ 2017-10-18 까지 주문을 받지 않음 (#163)

## [v0.0.23] - Wed, 13 Sep 2017 17:35:14 +0900

### Changed
- 2017-09-21 ~ 2017-10-15 까지 주문을 받지 않음 (#163)

## [v0.0.22] - Tue, 27 Jun 2017 18:14:01 +0900

### Changed
- 배송중 -> 배송완료 메세지의 변경 (#150)

### Added
- 배송 주문서에 메모를 추가하고 확인 할 수 있도록 함 (#136)

## [v0.0.21] - Tue, 20 Jun 2017 17:58:54 +0900
### Changed
- 할인된 금액을 기준으로 연장비를 책정
- 결제방법이 쿠폰일때 발행처를 표시 (#158)

## [v0.0.20] - Mon, 05 Jun 2017 17:55:18 +0900
### Changed
- suit 타입쿠폰 사용 후에 배송비와 연장비를 결제하도록 변경 (#157)

## [v0.0.19] - Thu, 11 May 2017 18:36:04 +0900
### Added
- 이메일찾기 기능 추가 (#32)

### Changed
- SMS 를 직접 작성하는 기능 대신 staff 문자 전송으로 링크 (#148)

### Fixed
- 주문서 목록을 csv 로 내보낼때 주소를 올바르게 표기 (#144)

v0.0.18   Thu, 04 May 2017 18:35:08 +0900
  - 운송장과 코멘트가 양립할 수 없는 버그 해결 (#149)
  - 여성의 자켓 이미지와 설명을 추가 (#100)
  - 자켓과 치마 사이즈와 관련된 이미지 추가 (#101)

v0.0.17   Mon, 01 May 2017 17:57:26 +0900
  - 배송완료 문자메세지 변경 (#150)
  - 쿠폰사용안내 문구 추가

v0.0.16   Fri, 28 Apr 2017 18:58:43 +0900
  - 비율타입의 쿠폰을 지원 (#151)
  - 링크스타트 쿠폰에 대해 대학교명을 입력받음 (#151)
  - 배송중 문자메세지의 잘못된 링크 수정 (#150)

v0.0.15   Thu, 20 Apr 2017 19:05:56 +0900
  - 주문서 요약에 여성의 자켓과 스커트 사이즈를 표시 (#135)
  - 의류정보에서 재고관리로의 링크추가 (#121)
  - 로그인한 staff 계정이 담당자로 지정됨 (#125)
