@@ -132,6 +132,7 @@ sub _private_routes {
     $order->post('/payments')->to('order#create_payment');
     $order->post('/coupon')->to('order#insert_coupon');
     $order->post('/cancel')->to('order#cancel_payment');
+    $order->post('/details')->to('order#create_order_detail');
 
     my $payment = $payments->under('/:payment_id')->to('payment#payment_id');
     $payment->put('/')->to('payment#update_payment');
