@@ -845,6 +845,41 @@ sub cancel_payment {
     $self->render( json => { pay_method => $pay_method, status => 'cancelled' } );
 }
 
+=head2 create_order_detail
+
+    POST /orders/:order_id/details
+
+=cut
+
+sub create_order_detail {
+    my $self  = shift;
+    my $order = $self->stash("order");
+
+    my $v = $self->validation;
+    $v->required('name');
+    $v->required('price');
+
+    if ( $v->has_error ) {
+        my $failed = $v->failed;
+        return $self->error( 400, 'Parameter validation failed: ' . join( ', ', @$failed ) );
+    }
+
+    my $name   = $v->param('name');
+    my $price  = $v->param('price');
+    my $detail = $order->create_related(
+        'order_details',
+        {
+            name        => $name,
+            price       => $price,
+            final_price => $price,
+        }
+    );
+
+    return $self->error( 500, "Failed to create a new order_detail" ) unless $detail;
+    my %columns = $detail->get_columns;
+    $self->render( json => \%columns, status => 201 );
+}
+
 =head2 _cancel_payment_cond
 
     my $boolean = $self->_cancel_payment_cond($order, $shipping_date);
