@@ -3,6 +3,9 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/)
 
 ## [Unreleased]
 
+### Added
+- POST /orders/:id/details
+
 ## [v0.1.1] - Wed, 15 Nov 2017 17:33:47 +0900
 
 ### Fixed
